--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.14.2",
     "graphql-request": "^7.1.0",
+    "jsdom": "^25.0.1",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@typescript-eslint/parser": "^8.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^1.2.3",
