--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "lint": "eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\"",
+    "astro:check": "astro check",
     "astro": "astro"
   },
   "dependencies": {
