--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^1.2.3",
