--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ASTRO_HYGRAPH_ENDPOINT: ${{ secrets.ASTRO_HYGRAPH_ENDPOINT }}
 
     steps:
     - uses: actions/checkout@v3
