--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@sferg989/astro-utils": "^0.0.1",
     "astro": "^4.14.2",
     "graphql-request": "^7.1.0",
     "jsdom": "^25.0.1",
